--- a/BestBoQ/BestBoQ/Site.Master
+++ b/BestBoQ/BestBoQ/Site.Master
@@ -47,13 +47,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">BestBoQ</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/HowTo">How To</a></li>
+                        <li><a runat="server" href="~/Login">Login</a></li>
+                        <li><a runat="server" href="~/Register">Register</a></li>
                     </ul>
                 </div>
             </div>
