--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -24,13 +24,13 @@ q {
     quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
+    blockquote:before,
+    blockquote:after,
+    q:before,
+    q:after {
+        content: '';
+        content: none;
+    }
 
 table {
     border-collapse: collapse;
@@ -60,10 +60,10 @@ a {
     color: #004F32;
 }
 
-a:hover,
-a:focus {
-    color: #004F32;
-}
+    a:hover,
+    a:focus {
+        color: #004F32;
+    }
 
 
 /***********************************
@@ -89,40 +89,40 @@ Navigation bar
     padding-top: 5px;
 }
 
-.navbar-text>a {
-    color: #004F32 !important;
-}
+    .navbar-text > a {
+        color: #004F32 !important;
+    }
 
-.navbar-default .navbar-nav>li>a {
+.navbar-default .navbar-nav > li > a {
     color: #717f86;
     font-size: 14px;
     font-weight: 700;
 }
 
-.navbar-default .dropdown-menu>li>a {
+.navbar-default .dropdown-menu > li > a {
     color: #717f86;
     font-size: 14px;
     font-weight: 700;
 }
 
-.navbar-nav>li>a {
+.navbar-nav > li > a {
     padding: 0px;
     margin: 10px 5px;
     padding: 10px 15px;
 }
 
-.navbar-default .navbar-nav>li>a:focus,
-.navbar-default .navbar-nav>li>a:hover {
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li > a:hover {
     color: #004F32;
 }
 
-.navbar-default .dropdown-menu>li>a:focus,
-.navbar-default .dropdown-menu>li>a:hover {
+.navbar-default .dropdown-menu > li > a:focus,
+.navbar-default .dropdown-menu > li > a:hover {
     color: #004F32;
     background: none;
 }
 
-.navbar-nav .active>a {
+.navbar-nav .active > a {
     background: none !important;
     color: #004F32 !important;
     outline: none;
@@ -143,12 +143,12 @@ Navigation bar
     border: 1px solid #004F32;
 }
 
-.btn-trial a:hover,
-.btn-trial a:focus {
-    border: 1px solid #004F32;
-    background-color: #fff;
-    color: #004F32 !important;
-}
+    .btn-trial a:hover,
+    .btn-trial a:focus {
+        border: 1px solid #004F32;
+        background-color: #fff;
+        color: #004F32 !important;
+    }
 
 .navbar-default .navbar-brand {
     font-family: 'Dosis', sans-serif !important;
@@ -160,9 +160,9 @@ Navigation bar
     margin: 20px 0px;
 }
 
-.navbar-default .navbar-brand span {
-    font-weight: 100 !important;
-}
+    .navbar-default .navbar-brand span {
+        font-weight: 100 !important;
+    }
 
 .navbar {
     margin-bottom: 0px;
@@ -235,15 +235,19 @@ Banner
     0% {
         top: 10px;
     }
+
     25% {
         top: 14px;
     }
+
     50% {
         top: 19px;
     }
+
     75% {
         top: 24px;
     }
+
     100% {
         top: 28px;
     }
@@ -253,15 +257,19 @@ Banner
     0% {
         top: 10px;
     }
+
     25% {
         top: 14px;
     }
+
     50% {
         top: 19px;
     }
+
     75% {
         top: 24px;
     }
+
     100% {
         top: 28px;
     }
@@ -271,15 +279,19 @@ Banner
     0% {
         top: 10px;
     }
+
     25% {
         top: 14px;
     }
+
     50% {
         top: 19px;
     }
+
     75% {
         top: 24px;
     }
+
     100% {
         top: 28px;
     }
@@ -347,15 +359,15 @@ Banner
     margin-top: 10px;
 }
 
-.quote .btn:hover,
-.quote .btn:focus {
-    background-color: #fff;
-    color: #004F32;
-    border-color: #fff;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
+    .quote .btn:hover,
+    .quote .btn:focus {
+        background-color: #fff;
+        color: #004F32;
+        border-color: #fff;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
 
 
 /***********************************
@@ -425,25 +437,25 @@ h2 {
     -o-border-radius: 0px 80px 99px 99px;
 }
 
-.orga-stru h3 {
-    font-size: 36px;
-    color: white;
-    font-weight: bold;
-}
+    .orga-stru h3 {
+        font-size: 36px;
+        color: white;
+        font-weight: bold;
+    }
 
-.orga-stru p {
-    font-size: 14px;
-    color: white;
-    font-weight: normal;
-    line-height: 20px;
-    padding-top: 15px;
-}
+    .orga-stru p {
+        font-size: 14px;
+        color: white;
+        font-weight: normal;
+        line-height: 20px;
+        padding-top: 15px;
+    }
 
-.orga-stru i {
-    font-size: 150px;
-    margin-top: 35px;
-    color: rgb(255, 255, 255);
-}
+    .orga-stru i {
+        font-size: 150px;
+        margin-top: 35px;
+        color: rgb(255, 255, 255);
+    }
 
 h3.det-txt {
     font-size: 40px;
@@ -625,20 +637,20 @@ Price Table
     position: relative;
 }
 
-.price-table .pricing-head {
-    background: #fff;
-    padding: 40px;
-    text-align: center;
-}
+    .price-table .pricing-head {
+        background: #fff;
+        padding: 40px;
+        text-align: center;
+    }
 
-.price-table .pricing-head h4 {
-    font-size: 22px;
-    color: #232c3b;
-    margin-top: 0px;
-    letter-spacing: 1px;
-    border-bottom: 1px solid #232c3b;
-    padding-bottom: 20px;
-}
+        .price-table .pricing-head h4 {
+            font-size: 22px;
+            color: #232c3b;
+            margin-top: 0px;
+            letter-spacing: 1px;
+            border-bottom: 1px solid #232c3b;
+            padding-bottom: 20px;
+        }
 
 .pricing-head .amount {
     font-size: 60px;
@@ -732,11 +744,11 @@ Contact Us
     margin-bottom: 15px;
 }
 
-#sendmessage.show,
-#errormessage.show,
-.show {
-    display: block;
-}
+    #sendmessage.show,
+    #errormessage.show,
+    .show {
+        display: block;
+    }
 
 
 /***********************************
@@ -749,55 +761,55 @@ Footer
     color: #ccc;
 }
 
-.footer a {
-    color: #fff;
-}
+    .footer a {
+        color: #fff;
+    }
 
-.footer h3 {
-    font-weight: 300;
-    letter-spacing: 0.05em;
-    margin: 0 0 40px;
-    font-size: 24px;
-}
+    .footer h3 {
+        font-weight: 300;
+        letter-spacing: 0.05em;
+        margin: 0 0 40px;
+        font-size: 24px;
+    }
 
-.footer .form-control {
-    border-radius: 30px;
-    border: none;
-    background: rgba(255, 255, 255, .1);
-    padding-left: 30px;
-    color: #e5e6e7;
-    margin-bottom: 0;
-    height: 48px;
-}
+    .footer .form-control {
+        border-radius: 30px;
+        border: none;
+        background: rgba(255, 255, 255, .1);
+        padding-left: 30px;
+        color: #e5e6e7;
+        margin-bottom: 0;
+        height: 48px;
+    }
 
-.footer .social-links li a {
-    color: #fff;
-    font-size: 32px;
-    line-height: 50px;
-    border-radius: 50%;
-    text-align: center;
-    -webkit-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
+    .footer .social-links li a {
+        color: #fff;
+        font-size: 32px;
+        line-height: 50px;
+        border-radius: 50%;
+        text-align: center;
+        -webkit-transition: all .3s ease-out;
+        transition: all .3s ease-out;
+    }
 
-.footer .social-links li {
-    display: inline-block;
-    margin: 0 25px 25px;
-    -webkit-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
+    .footer .social-links li {
+        display: inline-block;
+        margin: 0 25px 25px;
+        -webkit-transition: all .3s ease-out;
+        transition: all .3s ease-out;
+    }
 
-.footer .mc-trial {
-    margin: 20px 0;
-}
+    .footer .mc-trial {
+        margin: 20px 0;
+    }
 
-.footer .social-links {
-    list-style: none;
-    padding: 0;
-    /* margin: 30px 0 40px; */
-    /* padding: 40px 0 0; */
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
+    .footer .social-links {
+        list-style: none;
+        padding: 0;
+        /* margin: 30px 0 40px; */
+        /* padding: 40px 0 0; */
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    }
 
 .btn-submit:hover,
 .btn-submit:focus {
@@ -813,9 +825,9 @@ Footer
     color: #fff;
 }
 
-.btn-submit i {
-    padding-left: 8px;
-}
+    .btn-submit i {
+        padding-left: 8px;
+    }
 
 .btn-sec {
     margin-top: 20px;
@@ -836,24 +848,24 @@ Footer
     background-color: #eee;
 }
 
-.mem-info h4 {
-    font-size: 18px;
-    padding: 10px 0px;
-}
+    .mem-info h4 {
+        font-size: 18px;
+        padding: 10px 0px;
+    }
 
-.mem-info h3 {
-    font-size: 24px;
-    padding: 15px 0px;
-}
+    .mem-info h3 {
+        font-size: 24px;
+        padding: 15px 0px;
+    }
 
-.mem-info h5 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+    .mem-info h5 {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 
-.mem-info p {
-    margin: 0 0 10px;
-}
+    .mem-info p {
+        margin: 0 0 10px;
+    }
 
 .agent-social li {
     display: inline-block;
@@ -880,11 +892,18 @@ Footer
     transition: all 0.3s ease-in-out;
 }
 
-.btn-green,
-.btn-green:hover {
+.btn-green {
     background-color: #004F32;
     color: #fff;
+    font-weight: 700;
 }
+
+
+    .btn-green:hover, .btn-green:focus {
+        background-color: #fff;
+        color: #004F32;
+        border: 1px solid #004F32;
+    }
 
 .footer .form-control:focus {
     box-shadow: none;
@@ -901,14 +920,17 @@ Responsive media queries
     .ser-text {
         font-size: 20px;
     }
+
     .service-box,
     .feature-info,
     .orga-stru {
         margin-bottom: 30px;
     }
+
     .pricing-head .amount {
         font-size: 51px;
     }
+
     .price-table .pricing-head h4 {
         font-size: 18px;
     }
@@ -918,13 +940,16 @@ Responsive media queries
     .ser-text {
         font-size: 20px;
     }
+
     .service-box,
     .feature-info {
         margin-bottom: 30px;
     }
+
     .pricing-head .amount {
         font-size: 51px;
     }
+
     .price-table .pricing-head h4 {
         font-size: 18px;
     }
@@ -934,70 +959,90 @@ Responsive media queries
     .text-dec {
         font-size: 20px;
     }
+
     .big-text {
         font-size: 30px;
     }
+
     .small-text {
         font-size: 14px;
     }
+
     .intro-para {
         font-size: 30px;
     }
+
     .header-section p {
         font-size: 14px;
     }
+
     .heading {
         margin-bottom: 20px;
     }
+
     .orga-stru i {
         font-size: 92px;
     }
+
     .orga-stru {
         padding: 5px 5px 15px 5px;
         width: 75px;
         margin-bottom: 20px;
     }
-    .orga-stru h3 {
-        font-size: 28px;
-    }
-    .orga-stru p {
-        font-size: 13px;
-    }
+
+        .orga-stru h3 {
+            font-size: 28px;
+        }
+
+        .orga-stru p {
+            font-size: 13px;
+        }
+
     h3.det-txt {
         font-size: 28px;
     }
+
     .cta-2-txt {
         font-size: 20px;
     }
+
     .service-box,
     .text-comment,
     .price-table {
         margin-bottom: 30px;
     }
+
     .contact-form-button {
         width: 40%;
     }
+
     .footer .social-links li {
         margin: 0 5px 25px;
     }
+
     .cta-2-form-submit-btn {
         font-size: 10px;
     }
+
     .cta-2-form input[type="email"] {
         padding: 13px 10px;
         font-size: 10px;
         min-width: 187px;
     }
+
     .modal-sm {
         width: 300px;
     }
+
     .login-box-body {
         padding: 15px 20px;
     }
+
     .navbar-default .navbar-brand {
         margin-left: 10px;
     }
-    .navbar-default .navbar-nav>li>a {
+
+    .navbar-default .navbar-nav > li > a {
         text-align: center;
     }
 }
@@ -1009,18 +1054,18 @@ Fade Bs-carousel
 ************************************
 ***********************************/
 
-.fade-carousel .carousel-indicators>li {
+.fade-carousel .carousel-indicators > li {
     margin: 0 2px;
     background-color: #004F32;
     border-color: #004F32;
     opacity: .7;
 }
 
-.fade-carousel .carousel-indicators>li.active {
-    width: 10px;
-    height: 10px;
-    opacity: 1;
-}
+    .fade-carousel .carousel-indicators > li.active {
+        width: 10px;
+        height: 10px;
+        opacity: 1;
+    }
 
 .carousel-caption h3 {
     color: #FFF;
@@ -1038,7 +1083,8 @@ Media Queries
         position: relative;
         height: 70vh;
     }
-    .fade-carousel .carousel-inner .item {
-        height: 70vh;
-    }
+
+        .fade-carousel .carousel-inner .item {
+            height: 70vh;
+        }
 }
