--- a/BestBoQ/BestBoQ/CreateHomeNestedMaster.master
+++ b/BestBoQ/BestBoQ/CreateHomeNestedMaster.master
@@ -9,7 +9,7 @@
 <asp:Content ID="Content2" ContentPlaceHolderID="content" runat="server">
     <section id="home" class="section-padding">
         <div class="container">
-            
+
             <asp:ContentPlaceHolder ID="progress" runat="server">
             </asp:ContentPlaceHolder>
 
@@ -22,6 +22,50 @@
                 </div>
 
                 <aside class="col-sm-4">
+                    <div>
+                        <div>
+                            <div class="panel panel-default banner discount">
+                                <div>
+                                    <div>
+                                        <div>
+                                            <span>Don’t miss out! There are only 3 rooms left at this price!</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default price-details">
+                            <div class="panel-body">
+                                <div class="room-details-info-container">
+                                    <h5 id="roomdetails-title" class="m-b-4 m-t-0">Your Project Details</h5>
+                                    <div>
+                                        <dl class="dl-horizontal dl-horizontal-left">
+                                            <dt>ชื่อโครงการ :</dt>
+                                            <dd id="summary-detail-project-name">N/A</dd>
+                                        </dl>
+                                        <dl class="dl-horizontal dl-horizontal-left">
+                                            <dt>ชื่อลูกค้า :</dt>
+                                            <dd id="summary-detail-project-customer">N/A</dd>
+                                        </dl>
+                                        <dl class="dl-horizontal dl-horizontal-left">
+                                            <dt>ประเภทโครงการ :</dt>
+                                            <dd id="summary-detail-project-type">N/A</dd>
+                                        </dl>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="panel-footer">
+                                <p class="m-b-0"></p>
+                                <dl class="dl-horizontal dd-align-right price-conclusion total-price">
+                                    <dt><strong class="h5">Total Price</strong></dt>
+                                    <dd><span><strong id="totalAmount" class="total-amount h5">฿ 0.00</strong>
+                                    </span>
+                                    </dd>
+                                </dl>
+                                <small class="charge-summary"><strong>Not Included:</strong> <span>Current step, Service charge and Discount</span></small>
+                            </div>
+                        </div>
+                    </div>
                     <asp:ContentPlaceHolder ID="body_right" runat="server">
                     </asp:ContentPlaceHolder>
                 </aside>
