--- a/BestBoQ/BestBoQ/CreateHomeNestedMaster.master
+++ b/BestBoQ/BestBoQ/CreateHomeNestedMaster.master
@@ -77,6 +77,7 @@
 <asp:Content ID="Content3" ContentPlaceHolderID="script" runat="server">
     <script src="lib/datetimepicker/js/moment-with-locales.js"></script>
     <script src="lib/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="js/init.validate.radio.js"></script>
     <script>
         $(document).ready(function () {
             validateForm('.form');
