--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -1,8 +1,6 @@
 /*
     Theme Name: Mentor
-    Theme URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
     Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
 */
 
 body {
@@ -10,7 +8,7 @@ body {
     line-height: 1.52;
     color: #717f86;
     font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Prompt','Open Sans', 'sans-serif';
     font-weight: 400;
 }
 
@@ -51,7 +49,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: Open Sans, sans-serif;
+    font-family: 'Prompt', 'Open Sans', 'sans-serif';
     font-weight: 700;
     color: #4B4B4C;
 }
