--- a/BestBoQ/BestBoQ/HomeNestedMaster.master
+++ b/BestBoQ/BestBoQ/HomeNestedMaster.master
@@ -16,7 +16,7 @@
             </ul>
         </li>
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Signed in as <%=Session["Username"] %><span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=Session["Username"] %><span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a href="Profile.aspx">My Profile</a></li>
                 <li role="separator" class="divider"></li>
