--- a/BestBoQ/BestBoQ/Main.Master
+++ b/BestBoQ/BestBoQ/Main.Master
@@ -53,7 +53,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="Home.aspx">
-                        <img height="50" src="images/logo.png" />
+                        <img height="60" src="images/logo.jpg" />
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
