--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -223,10 +223,11 @@ Banner
     margin-top: 30px;
 }
 
-.modal-dialog {
+.modal-small {
     width: 600px;
     margin: 150px auto;
 }
+
 
 .mouse {
     width: 25px;
@@ -491,7 +492,15 @@ Cta
 
 #cta-2 {
     padding: 30px 0;
+    padding-bottom: 50px;
+    border-top: 6px solid #27AE60 !important;
+    background: rgb(24, 26, 28) url(https://ununsplash.imgix.net/photo-1416339134316-0e91dc9ded92?q=75&fm=jpg&s=883a422e10fc4149893984019f63c818) no-repeat top center fixed;
 }
+
+    #cta-2 h2 {
+        color: #FFF !important;
+        border-bottom: 1px solid #FFF !important;
+    }
 
 .cta-2-txt {
     font-size: 24px;
