--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -773,7 +773,8 @@ Footer
 ************************************/
 
 .footer {
-    padding: 60px 0 20px;
+    /*padding: 60px 0 20px;*/
+    padding: 30px 0 20px;
     background: #111;
     color: #ccc;
 }
