--- a/BestBoQ/BestBoQ/Main.Master
+++ b/BestBoQ/BestBoQ/Main.Master
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="theme/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="theme/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="theme/css/imagehover.min.css" />
-    <link href="lib/icheck/skins/flat/green.css" rel="stylesheet" />
+    <link href="lib/icheck/skins/minimal/green.css" rel="stylesheet" />
     <link href="lib/Inputmask/css/inputmask.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/theme-default.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="theme/css/style.css" />
@@ -33,6 +33,13 @@
         }
 
         .iradio_flat-green {
+            margin-bottom: 6px;
+            margin-top: 6px;
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+
+        .iradio_minimal-green {
             margin-bottom: 6px;
             margin-top: 6px;
             margin-right: 10px;
@@ -144,8 +151,8 @@
 
         $(document).ready(function () {
             $('input').iCheck({
-                checkboxClass: 'icheckbox_flat-green',
-                radioClass: 'iradio_flat-green',
+                checkboxClass: 'icheckbox_minimal-green',
+                radioClass: 'iradio_minimal-green',
                 increaseArea: '20%' // optional
             });
 
